fixed footer desc text align

--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -132,6 +132,7 @@
   font-family: $ff-open-sans;
   color: $grey;
   line-height: 1.571;
+  text-align: justify;
 }
 .descptn:nth-of-type(2){
   margin-top: 20px;
